Fixed - [css] modify

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         background: #3a8fb7;
         margin: 0;
         overflow: hidden; /* 隱藏可能的滾動條 */
-        font: normal 11px 'Helvetica Neue', Helvetica, sans-serif;
+        font: normal 'Helvetica Neue', Helvetica, sans-serif;
       }
 
       svg {
